frontend_sources = [
  'driver.c',
  'editor.c',
  'engine_dvi.c',
  'engine_pdf.c',
  'fs.c',
  'incdvi.c',
  'json_parser.c',
  'loader.c',
  'logo.c',
  'main.c',
  'myabort.c',
  'prot_parser.c',
  'renderer.c',
  'sexp_parser.c',
  'sprotocol.c',
  'state.c',
  'synctex.c',
]

shared_library('libtexpresso',
               sources : frontend_sources,
)
